styles/icons.css
#icons-page {
    --size: 3rem;

    width: 100%;
}

#icons-page header {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 1rem;

    margin-bottom: 2rem;
}

#icons-page header input {
    width: 100%;
    max-width: 400px;
}

#icons-grid {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(var(--size), 1fr));
    gap: calc(var(--size) / 2);

    width: 100%;
}

.card {
    display: flex;
    align-items: center;
    justify-content: center;

    width: var(--size);
    height: var(--size);
    padding: 0.5rem;
    box-sizing: border-box;

    border-radius: 100vh;
}

.card svg {
    width: calc(var(--size) / 2);
    height: calc(var(--size) / 2);
}

.icon-item {
    --stagger: 0.2s;
    --duration: 0.8s;
}

@media (max-width: 600px) {
    #icons-page {
        --size: 2.5rem;
    }

    #icons-page header input {
        width: 100%;
        max-width: 600px;
    }
}

